Almost done with intro to types

--- a/en/IntroToTypes.ipynb
+++ b/en/IntroToTypes.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The `unit` type\n",
+    "### The `unit` type and first look to side effects\n",
     "\n",
     "The list of all basic types in F\\# can be found [here](https://learn.microsoft.com/en-us/dotnet/fsharp/language-reference/basic-types). Beside the usual `bool`, `char`, `string` and all the various numeric numbers, there is one that is called `unit`. \n",
     "\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -306,7 +306,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we assign the `printfn` result into the value `q`, and then we print its value, which is, `()`. Note that the function `printfn` does print in the console, pretty much as any print-like function in most languages. Now, printing something in the console is _not_ the output of the function, but a _side effect_: the function does something that alters what is happening in the console. Furthermore, all the data that your code produces will be in the form of some side effect: printing in the console, saving in a Database, saving a file, sending an email, etc. "
+    "Here we assign the `printfn` result into the value `q`, and then we print its value, which is, `()`. Note that the function `printfn` does print in the console, pretty much as any print-like function in most languages. \n",
+    "\n",
+    "Also, one can have a function that does not have any input:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let ohMy () =\n",
+    "    \"ohMy\"    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function `ohMy` just defines the string \"ohMy\", and does not need to receive anything as an input. \n",
+    "\n",
+    "In general, the `unit` type is a typical clue that we are dealing with some _side effect_. For example, printing something in the console is _not_ the output of the `printfn` function, but a side effect: the function does something that alters what is happening in the console. Your code is minding its own bussiness, but at some point, you decided to show some information on the console. But your code is not the console program, it has nothing to do with it, except that it _can_ write things in the console. That is a side effect: something your code does that does not belong to the realm the code is working in. \n",
+    "\n",
+    "All the data that your code produces will be in the form of some side effect: printing in the console, saving in a database, creating a file, sending an email, etc. Also, all the data your code uses comes from somewhere: a file, the input of the user in a keyboard, a url, etc. Any useful program will result in some side effect. Therefore, even though functional programming is all about functions, at some point it needs to have tools to receive or return data from the world. Those are _desired_ side effects, probably written in some form of specification of your application. \n",
+    "\n",
+    "What functional programming does is to give you all the tools to prevent _undesired_ side effects in your code, but to produce _desired_ side effects when are needed. For example, a particular function in your code will receive some inmutable inputs and produce some new outputs. Then, if one restricts the attention to that function, anything outside the world of it remains unchanged, but a new value (the output) is created. \n",
+    "\n",
+    "In non-functional languages, the most common undesired side effect is to be able to change input values in a function. In most cases, these languages have the ability to pass arguments to a function as a reference (a pointer in C, for example) so one can change the values of it, which in turn will change the value of the argument variable. Or one can change the value of a global variable within a function. This makes debugging much harder, and code much difficult to mantain. \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Checkout [the Jupyter notebook companion of this guide](https://github.com/fcolavecchia/fp-course/blob/main/en/IntroToTypes.ipynb).\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, [discriminated unions]({% post_url 2023-01-25-discriminated_unions %})."
    ]
   }
  ],
