--- a/en/ScratchPad.ipynb
+++ b/en/ScratchPad.ipynb
@@ -480,6 +480,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "javascript"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b :"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "b :"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#!js\n",
+    "function bar_js(a){\n",
+    "    b = 3 \n",
+    "    return a \n",
+    "}\n",
+    "\n",
+    "b = 4\n",
+    "console.log(\"b :\",b)\n",
+    "bar_js(33)\n",
+    "console.log(\"b :\",b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
