--- a/en/IntroToTypes.ipynb
+++ b/en/IntroToTypes.ipynb
@@ -12,7 +12,7 @@
     }
    },
    "source": [
-    "To completely define a function, you not only need to establish its behavior, but also the inputs and outputs. That is where _types_ come! \n",
+    "To completely define a function, you not only need to establish its behavior, but also its inputs and outputs. That is what _types_ are for! \n",
     "\n",
     "## Thinking with types\n",
     "\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -116,11 +116,13 @@
     "\n",
     "If you hover your mouse over each of the values above, you can see something like this:\n",
     "\n",
-    "![Type inference](../figures/type_inference.png)\n",
+    "<img src=\"../img/type_inference.png\" alt=\"Type inference\" width=\"400\"/>\n",
+    "\n",
     "\n",
     "That box contains the type of the value `a` that has been _inferred_ by the compiler. Yes, when you code in a F\\# supported IDE, there will be an F\\# compiler digesting your code as you write it, and exploring which types are you working with. In the vast majority of the cases, the compiler guess is correct. There are some cases where it cannot infer the type from your code's context. In that case, you will see some red wiggles underlining your variable, and a warning message:\n",
     "\n",
-    "![Indeterminate lookup](../figures/indeterminate_lookup.png)\n",
+    "<img src=\"../img/indeterminate_lookup.png\" alt=\"Indeterminate lookup\" width=\"600\"/>\n",
+    "\n",
     "\n",
     "that says exactly that: the compiler does not know which type needs to assign to the troubled value.\n",
     "\n",
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -183,7 +185,7 @@
    "source": [
     "A closer look at the function above leads us to another interesting notation. Hovering over `sum` we see:\n",
     "\n",
-    "![Inferred function types](../figures/function_types.png)\n",
+    "<img src=\"../img/function_types.png\" alt=\"Function types\" width=\"400\"/>\n",
     "\n",
     "The compiler says us that the function `sum` is of type \n",
     "```fsharp\n",
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -313,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -352,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Checkout [the Jupyter notebook companion of this guide](https://github.com/fcolavecchia/fp-course/blob/main/en/IntroToTypes.ipynb).\n"
+    "> Checkout [the Jupyter notebook companion of this guide](https://github.com/fcolavecchia/fp-course/blob/main/en/IntroToTypes.ipynb)."
    ]
   },
   {
