--- a/en/DiscriminatedUnions.ipynb
+++ b/en/DiscriminatedUnions.ipynb
@@ -20,7 +20,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -30,20 +30,6 @@
     "    | Chocolate\n",
     "    | Candy "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
@@ -61,7 +47,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -92,7 +78,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -119,7 +105,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -163,7 +149,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -204,7 +190,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -259,7 +245,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -286,13 +272,13 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
    "source": [
     "let belovedChocolate = BrandedFood.Chocolate \"Wonka\"\n",
-    "let healthyChips = BrandedFood.Chips \"NotALays\"\n",
+    "let healthyChips = BrandedFood.Chips \"NotALeis\"\n",
     "let sourCandy = BrandedFood.Candy \"TearDrops\""
    ]
   },
@@ -312,7 +298,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -338,7 +324,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -364,7 +350,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -384,7 +370,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -418,7 +404,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -446,7 +432,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Note on how a discriminated union that mix types presents a kind of divergence in code. This is refered to inputs and outputs: if a function receives one of these du as an input, it needs to wrap the du type into another type, because it is not possible for a function to return the wrapped value of a du, since it can be different types. "
+    "> Note on how a discriminated union that mix basic types seems to present a kind of divergence in code. The type `Change` combines a wrapped `float` type (with `Amount`) and a pure union type `NoChange`. Since functions need to have specific input and output types, any function that receives a `Change` input has to return a defined output. There usually two possibilities. The first one is that the function flattens  the inputs (such as in the case of `changeValue`), where one gets the float value of the money the user receives. The second one corresponds to a function that  promotes the input types to another one: for example, the trivial case would be a function that prints the amount of money the customer receives, `printChange: Change -> ()`, that is, receives a `Change` and returns `unit`. \n",
+    "> This is one of the key ideas behind functional programming, being able to connect different types through functions.\n"
    ]
   },
   {
@@ -454,13 +441,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Protecting inputs with single discriminated unions"
+    "### Protecting inputs with single discriminated unions\n",
+    "\n",
+    "The last, but not least, use case of discriminated unions correspond to those ones that only have one term. Let us say that we need to describe the models of the different items in our electronics vending machine. One way to do it is using a _single_ discriminated union:\n"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type Model =\n",
+    "| Model of string "
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Then, we can define different models of items:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let yPhone = Model \"Xtreme 3S\"\n",
+    "let miniSpeakers = Model \"Louder Pro\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the discriminated union is has only one case, there is a short way to unwrap the value inside it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the model of the yPhone is \"Xtreme 3S\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<null>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let (Model yPhoneModel) = yPhone\n",
+    "printfn \"The model of the yPhone is %A\" yPhoneModel"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks like there is a lot of pomp in this types, why just not use a simpler `string` instead? The answer is, again, related with functions. Let us define the `printModel` function as:"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -484,33 +552,51 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "fsharp"
+    }
+   },
+   "outputs": [],
    "source": [
-    "#### Comment on FP vs OOP ?\n",
-    "\n",
-    "\n",
-    " \n",
-    "On the contrary, methods in a class are designed to change (that is, _mutate_) values of an instance of that class. \n",
-    "[FP vs OP](https://betterprogramming.pub/functional-programming-vs-object-oriented-programming-why-you-dont-need-to-choose-29820f89f348)\n",
-    "\n",
-    "We also presented the primitive types as an example, but to program with a reasonable chance of success, it is necessary for the language to be able to aggregate different primitive types in more complex ones. In the case of object oriented languages, one builds a hierarchy of classes that represent the domain one is working on. Those classes encapsulate not only data (that is described in types) but also their associated behavior through methods. In the case of functional F\\#, and other functional languages, there is no need to attach behavior to types.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#### Thinking with types\n",
-    "\n",
-    "As said before, almost all programming languages provide an idea of aggregating simple types (strings, bools, ints, etc.) into more complex ones, which is needed to properly describe a domain. The basic data of a user (name, email, etc.) can be put together in a type, the email data (to, from, subject, text, etc.) in another one and so on. Combining these new types one can generate more and more complex ones, until you can build, for example, all the types needed for an email application. \n",
-    "\n",
-    "One of the most important steps in programming is to study the domain one is working on, and to fully understand how one can describe that domain with data and the processes that manage those data. In object oriented programming one is allowed (even required) to glue related processes and data together in classes. In functional programming one focuses on how processes (that is, functions) relate different kinds of data (that is, types). Since data in functional programming is inmutable and functions create outputs from inputs, one needs to identify the processes of our domain and distill them into functions, with proper inputs and outputs, in such a way that one can combine those functions together by composing them properly. Therefore, the analysis of a process and it conversion into functions not only requires to define the rules and the logic of the creation of outputs from inputs, buy more importantly, to adequate stablish those inputs and outputs such that composition of functions can be used (see again this [beautiful picture example](https://mathinsight.org/function_machine_composition)).\n",
-    "\n",
-    "Functional programming languages typically define two kinds of aggregate types: product types and sum types. Product types \n",
-    "\n",
-    "#### Product type: Records\n",
-    "\n"
+    "let printModel (model: Model) =\n",
+    "    let (Model value) = model \n",
+    "    printfn \"The model value is %A\" model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model value is Model \"Xtreme 3S\"\n",
+      "The model value is Model \"Louder Pro\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<null>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "printModel yPhone\n",
+    "printModel miniSpeakers"
    ]
   },
   {
@@ -520,7 +606,7 @@
    "source": [
     "\n",
     "\n",
-    "#### Sum type: Discriminated unions"
+    "### Wrapping up"
    ]
   },
   {
@@ -536,16 +622,16 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".NET (C#)",
-   "language": "C#",
-   "name": ".net-csharp"
+   "display_name": ".NET (F#)",
+   "language": "F#",
+   "name": ".net-fsharp"
   },
   "language_info": {
-   "file_extension": ".cs",
-   "mimetype": "text/x-csharp",
+   "file_extension": ".fs",
+   "mimetype": "text/x-fsharp",
    "name": "C#",
-   "pygments_lexer": "csharp",
-   "version": "9.0"
+   "pygments_lexer": "fsharp",
+   "version": "4.5"
   },
   "orig_nbformat": 4,
   "vscode": {
