--- a/en/IntroToTypes.ipynb
+++ b/en/IntroToTypes.ipynb
@@ -89,13 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -131,13 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -159,13 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -196,23 +196,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
     {
-     "ename": "Error",
+     "ename": "Unhandled Exception",
      "evalue": "input.fsx (2,14)-(2,17) typecheck error The type 'float' does not match the type 'int'\ninput.fsx (2,12)-(2,13) typecheck error The type 'float' does not match the type 'int'",
      "output_type": "error",
      "traceback": [
-      "input.fsx (2,14)-(2,17) typecheck error The type 'float' does not match the type 'int'\n",
-      "input.fsx (2,12)-(2,13) typecheck error The type 'float' does not match the type 'int'"
+      "input.fsx (2,14)-(2,17) typecheck error The type 'float' does not match the type 'int'\ninput.fsx (2,12)-(2,13) typecheck error The type 'float' does not match the type 'int'"
      ]
     }
    ],
@@ -240,13 +239,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -268,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The `unit` type and first look to side effects\n",
+    "### The `unit` type and a first contact with side effects\n",
     "\n",
     "The list of all basic types in F\\# can be found [here](https://learn.microsoft.com/en-us/dotnet/fsharp/language-reference/basic-types). Beside the usual `bool`, `char`, `string` and all the various numeric numbers, there is one that is called `unit`. \n",
     "\n",
@@ -279,13 +278,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -315,13 +314,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -368,16 +367,16 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".NET (C#)",
-   "language": "C#",
-   "name": ".net-csharp"
+   "display_name": ".NET (F#)",
+   "language": "F#",
+   "name": ".net-fsharp"
   },
   "language_info": {
-   "file_extension": ".cs",
-   "mimetype": "text/x-csharp",
+   "file_extension": ".fs",
+   "mimetype": "text/x-fsharp",
    "name": "C#",
-   "pygments_lexer": "csharp",
-   "version": "9.0"
+   "pygments_lexer": "fsharp",
+   "version": "4.5"
   },
   "orig_nbformat": 4
  },
