--- a/en/ScratchPad.ipynb
+++ b/en/ScratchPad.ipynb
@@ -19,7 +19,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -44,7 +44,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -73,7 +73,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -89,7 +89,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -113,7 +113,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -152,7 +152,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -170,7 +170,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -203,7 +203,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -220,7 +220,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -236,7 +236,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -282,7 +282,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -319,7 +319,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -337,7 +337,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -367,7 +367,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -383,7 +383,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -411,7 +411,7 @@
      "language": "javascript"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.javascript"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -486,7 +486,7 @@
      "language": "javascript"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.javascript"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -548,7 +548,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -576,7 +576,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -606,7 +606,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -622,7 +622,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -648,7 +648,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -666,7 +666,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -706,7 +706,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -723,7 +723,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -739,7 +739,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -756,7 +756,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -775,7 +775,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -804,7 +804,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -829,7 +829,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -858,7 +858,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -874,7 +874,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -898,7 +898,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [],
@@ -916,7 +916,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "fsharp"
     }
    },
    "outputs": [
@@ -932,6 +932,116 @@
     "let p = 6\n",
     "printfn \"%A\" p "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type Electronics = \n",
+    "    | Phones\n",
+    "    | Speakers\n",
+    "    | Headphones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The price of speaker is: 29 $\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<null>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let s = Electronics.Speakers\n",
+    "\n",
+    "let price electronic = \n",
+    "    match electronic with \n",
+    "    | Phones -> 435\n",
+    "    | Speakers -> 29\n",
+    "    | Headphones -> 122\n",
+    "\n",
+    "printfn \"The price of speaker is: %A $\" (price s)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Unhandled Exception",
+     "evalue": "input.fsx (1,13)-(1,21) typecheck warning Incomplete pattern matches on this expression. For example, the value 'Headphones' may indicate a case not covered by the pattern(s).\ninput.fsx (2,13)-(2,23) typecheck warning Incomplete pattern matches on this expression. For example, the value 'Headphones' may indicate a case not covered by the pattern(s).\ninput.fsx (3,13)-(3,25) typecheck warning Incomplete pattern matches on this expression. For example, the value 'Phones' may indicate a case not covered by the pattern(s).\ninput.fsx (2,5)-(2,11) typecheck error Duplicate definition of value 'price2'\ninput.fsx (3,5)-(3,11) typecheck error Duplicate definition of value 'price2'",
+     "output_type": "error",
+     "traceback": [
+      "input.fsx (1,13)-(1,21) typecheck warning Incomplete pattern matches on this expression. For example, the value 'Headphones' may indicate a case not covered by the pattern(s).\ninput.fsx (2,13)-(2,23) typecheck warning Incomplete pattern matches on this expression. For example, the value 'Headphones' may indicate a case not covered by the pattern(s).\ninput.fsx (3,13)-(3,25) typecheck warning Incomplete pattern matches on this expression. For example, the value 'Phones' may indicate a case not covered by the pattern(s).\ninput.fsx (2,5)-(2,11) typecheck error Duplicate definition of value 'price2'\ninput.fsx (3,5)-(3,11) typecheck error Duplicate definition of value 'price2'"
+     ]
+    }
+   ],
+   "source": [
+    "let price2 (Phones _) = 435 in \n",
+    "let price2 (Speakers _) = 29 in \n",
+    "let price2 (Headphones _) = 122\n",
+    "\n",
+    "printfn \"The price of speaker is: %A $\" (price2 s)  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comment on FP vs OOP ?\n",
+    "\n",
+    "\n",
+    " \n",
+    "On the contrary, methods in a class are designed to change (that is, _mutate_) values of an instance of that class. \n",
+    "[FP vs OP](https://betterprogramming.pub/functional-programming-vs-object-oriented-programming-why-you-dont-need-to-choose-29820f89f348)\n",
+    "\n",
+    "We also presented the primitive types as an example, but to program with a reasonable chance of success, it is necessary for the language to be able to aggregate different primitive types in more complex ones. In the case of object oriented languages, one builds a hierarchy of classes that represent the domain one is working on. Those classes encapsulate not only data (that is described in types) but also their associated behavior through methods. In the case of functional F\\#, and other functional languages, there is no need to attach behavior to types.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Thinking with types\n",
+    "\n",
+    "As said before, almost all programming languages provide an idea of aggregating simple types (strings, bools, ints, etc.) into more complex ones, which is needed to properly describe a domain. The basic data of a user (name, email, etc.) can be put together in a type, the email data (to, from, subject, text, etc.) in another one and so on. Combining these new types one can generate more and more complex ones, until you can build, for example, all the types needed for an email application. \n",
+    "\n",
+    "One of the most important steps in programming is to study the domain one is working on, and to fully understand how one can describe that domain with data and the processes that manage those data. In object oriented programming one is allowed (even required) to glue related processes and data together in classes. In functional programming one focuses on how processes (that is, functions) relate different kinds of data (that is, types). Since data in functional programming is inmutable and functions create outputs from inputs, one needs to identify the processes of our domain and distill them into functions, with proper inputs and outputs, in such a way that one can combine those functions together by composing them properly. Therefore, the analysis of a process and it conversion into functions not only requires to define the rules and the logic of the creation of outputs from inputs, buy more importantly, to adequate stablish those inputs and outputs such that composition of functions can be used (see again this [beautiful picture example](https://mathinsight.org/function_machine_composition)).\n",
+    "\n",
+    "Functional programming languages typically define two kinds of aggregate types: product types and sum types. Product types \n",
+    "\n",
+    "#### Product type: Records\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -941,11 +1051,11 @@
    "name": ".net-fsharp"
   },
   "language_info": {
-   "file_extension": ".cs",
-   "mimetype": "text/x-csharp",
-   "name": "F#",
-   "pygments_lexer": "csharp",
-   "version": "9.0"
+   "file_extension": ".fs",
+   "mimetype": "text/x-fsharp",
+   "name": "C#",
+   "pygments_lexer": "fsharp",
+   "version": "4.5"
   },
   "orig_nbformat": 4
  },
