--- a/en/PythonExamples.ipynb
+++ b/en/PythonExamples.ipynb
@@ -199,11 +199,36 @@
     "print(\"x after:\", x, \"at \",hex(id(x)))\n",
     "print(\"y:\", y, \"at \",hex(id(y)))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "I am evil\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(a):\n",
+    "    a = \"I am evil\"\n",
+    "    return a \n",
+    "\n",
+    "a = 3 \n",
+    "b = f(a)\n",
+    "print(a)\n",
+    "print(f(a))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -217,12 +242,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5 (default, May 18 2021, 12:31:01) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1038e93ba1418ab4ede8bfa57363dc20f3ceb27f74719d4c3c57fe52e4b9de41"
+    "hash": "3d597f4c481aa0f25dceb95d2a0067e73c0966dcbd003d741d821a7208527ecf"
    }
   }
  },
